# nextest-hang-example

./: Cargo.toml
src/: main.rs
tests/: hanging_tests.rs
tests/fixtures/: mod.rs
