[package]
name = "nextest-hang-example"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = { version = "0.8.5", features = ["getrandom"] }
tokio = { version = "1.20.1", features = ["full"] }

[dev_dependencies]
assert_cmd = "2.0.4"
env_logger = "0.9.1"
once_cell = "1.16.0"
rstest = "0.15.0"
test-log = "0.2.11"
